--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -9,6 +9,7 @@ framework:
     session:
         handler_id: ~
         cookie_httponly: false
+        cookie_lifetime: 604800
 
     #esi: true
     #fragments: true
