--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,13 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "abraham/twitteroauth": "^0.9.2",
         "bupt1987/html-parser": "^3.0",
         "doctrine/annotations": "^1.6",
+        "doctrine/cache": "^1.8",
+        "google/apiclient": "^2.2",
         "guzzlehttp/guzzle": "^6.3",
+        "kolter/collections": "^1.0",
         "mongodb/mongodb": "^1.4",
         "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.2",
@@ -21,7 +25,9 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security": "*",
         "symfony/security-bundle": "*",
+        "symfony/stopwatch": "*",
         "symfony/validator": "*",
+        "symfony/var-dumper": "*",
         "symfony/yaml": "*"
     },
     "require-dev": {
