--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -4,11 +4,11 @@ nelmio_cors:
         origin_regex: true
         allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
         allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization', 'Access-Control-Allow-Credentials']
-        max_age: 3600
+        allow_headers: ['Content-Type', 'Authorization', 'Access-Control-Allow-Credentials','X-CSRF-Token']
+        max_age: 8600
     paths:
          '^/api/':
-            allow_origin: ['^http://localhost:[0-9]+']
-            allow_headers: ['Access-Control-Allow-Headers','content-type','Access-Control-Allow-Credentials','non-cachable', 'Cookie']
+            allow_origin: ['^http://localhost:[0-9]+','^http://tveso.tv:[0-9]+']
+            allow_headers: ['Access-Control-Allow-Headers','content-type','Access-Control-Allow-Credentials','non-cachable', 'Cookie','X-CSRF-Token']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
