--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,8 @@
         <env name="APP_DEBUG" value="1" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
         <env name="SHELL_VERBOSITY" value="-1" />
+        <env name="AWS_ACCESS_KEY_ID" value="AKIAIOJCTH5XM6TT227Q"/>
+        <env name="AWS_SECRET_ACCESS_KEY" value="KhxYibPXiY0AHQv/TDR5rKP4hkPuH61AZgeATSHc"/>
         <!-- define your env variables for the test env here -->
 
         <!-- ###+ nelmio/cors-bundle ### -->
