--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "ext-mongodb": "*",
         "abraham/twitteroauth": "^0.9.2",
+        "aws/aws-sdk-php": "^3.70",
         "bupt1987/html-parser": "^3.0",
         "doctrine/annotations": "^1.6",
         "doctrine/cache": "^1.8",
@@ -28,7 +31,10 @@
         "symfony/stopwatch": "*",
         "symfony/validator": "*",
         "symfony/var-dumper": "*",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+      "ext-fileinfo": "*",
+      "ext-zlib": "*",
+      "ext-calendar": "*"
     },
     "require-dev": {
         "symfony/browser-kit": "*",
