--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -8,7 +8,7 @@ nelmio_cors:
         max_age: 8600
     paths:
          '^/api/':
-            allow_origin: ['^http://localhost:[0-9]+','^http://tveso.tv:[0-9]+']
+            allow_origin: ['^http://localhost:[0-9]+','^http://tveso.tv:[0-9]*', 'http://tveso.tv']
             allow_headers: ['Access-Control-Allow-Headers','content-type','Access-Control-Allow-Credentials','non-cachable', 'Cookie','X-CSRF-Token']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
