--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ###> symfony/framework-bundle ###
 /.env
+.env.test
 /public/bundles/
 /var/
 /vendor/
@@ -9,7 +10,7 @@ symfony.lock
 .env
 .env.dist
 .env.test
-phpunit.xml.dist
+/phpunit.xml.dist
 jobs.bat
 ###< symfony/framework-bundle ###
 
